<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewIme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ime"
        app:layout_constraintEnd_toStartOf="@+id/textViewPrezime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/textViewPrezime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/prezime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textViewIme"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/textViewDatum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/datum_rodenja"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewIme"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/textViewPredmet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/predmet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDatum"
        android:layout_marginTop="16dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/textViewImePrezimeProfesora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ime_i_prezime_profesora"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPredmet"
        android:layout_marginTop="16dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/textViewAkademskaGodina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/akademska_godina"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewImePrezimeProfesora"
        android:layout_marginTop="16dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/textViewSatiPredavanja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sati_predavanja"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAkademskaGodina"
        android:layout_marginTop="16dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/textViewSatiLV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sati_lv_a"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSatiPredavanja"
        android:layout_marginTop="16dp"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/buttonHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vrati_se"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>